# portfolio

./: about.rst  contact.markdown  flake.nix  index.html  portfolio.cabal  preview.sh  rebuild.sh  site.hs
css/: default.css
docs/: 404.html  CNAME  about.html  archive.html  atom.xml  contact.html  index.html  projects.html
docs/2/: index.html
docs/css/: default.css
docs/pages/: About.html  Contact.html
docs/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  2023-02-23-prisoners-dilemma.html  2023-03-26-bstring-evo.html  2024-04-27-formal-monads-idris.html  2024-10-23-stm-dining-philosophers.html  2025-07-18-prolog-typechecker.html  2025-10-26-auto-type-derivs.html  2025-10-28-game-of-life.html  2025-11-11-chemlang.html
docs/projects/: 2022-05-16-hexer.html  2022-12-21-horcrux.html  (+8 more)
posts/: 2015-12-07-tu-quoque.markdown  2023-02-23-prisoners-dilemma.markdown  2023-03-26-bstring-evo.markdown  2024-04-27-formal-monads-idris.markdown  2024-10-23-stm-dining-philosophers.markdown  2025-07-18-prolog-typechecker.markdown  2025-10-26-auto-type-derivs.markdown  2025-10-28-game-of-life.markdown  2025-11-11-chemlang.markdown
projects/: 2022-05-16-hexer.markdown  2022-12-21-horcrux.markdown  2023-04-03-smartrockets.markdown  2023-04-28-haskell-study.markdown  2023-09-22-megastar.markdown  2023-10-24-amogus.markdown  2024-03-15-purity.markdown  2024-04-25-nbody-simulator.markdown  2024-05-18-qidris.markdown  2024-06-06-interval-algebra.markdown
templates/: default.html  projects.html
