name:               portfolio
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base   >= 4.20.2 && < 4.21
                  , hakyll >= 4.16.7 && < 4.17
                  , pandoc >= 3.8    && < 3.9

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
